--- a/index.html
+++ b/index.html
@@ -1,15 +1,103 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Baking with the Gemini API</title>
+    <meta charset="UTF-8">
+    <title>Ivs web</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="icon" type="image/x-icon" href="./public/favicon.ico" />
+    <link href="./public/css/colap_sidebar.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./public/css/iglsitwebapp.css">
 </head>
 
-<body>
-  <main>
-    <h1>Hello Gmynimaxitiendas addReg Whp form</h1>
+
+<body id="page-top">
+    <div id="mainpage">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3 d-flex justify-content-between">
+            <a class="links" href="#">
+                <img id="idimglogo" src="./public/logo.png" alt="Logo de tu sitio" class="paddleft_10 spancolor_blue"
+                    style="width:100px" />
+                <span class="visible spancolor_blue spansize_20 ">
+                </span>
+            </a>
+            <div class="navbar-nav ms-auto d-flex justify-content-between">
+                <img id="login" src="./public/img/sliderencab/usuarioinac.png" alt="login"
+                    style="width: 100px; padding-left: 20px; padding-right: 20px;" />
+                <img id="loginactivo" src="./public/img/sliderencab/usuarios.png" alt="login"
+                    style="width: 100px; padding-left: 20px; padding-right: 20px; display: none;" />
+            </div>
+        </nav>
+
+        <div style="z-index: 1000; border-radius: 10px; margin-top:95px" id="sliderinisesion" class="sidebar-rigth">
+            <div style="margin-top:30px; text-align: right; margin:38px;">
+                <span id="cerrar1">✖️</span>
+            </div>
+            <div style="margin-top:30px; text-align: center; margin:25px;">
+                <img id="logininac" src="./public/img/sliderencab/usuarioinac.png" alt="encausuarios"
+                    style="width:100px; margin-left: 130px; display: none;" />
+            </div>
+            <div style="margin-top:30px; text-align: center; margin:25px;">
+                <img id="loginac" src="./public/img/sliderencab/usuarios.png" alt="encausuarios"
+                    style="width:150px; padding-left: 20px; padding-right: 20px;" />
+            </div>
+            <div style="margin-top:10px; text-align: center; margin:25px;">
+                <span id="emailinisesion">Email</span>
+            </div>
+
+            <img id="accedergoogle" src="./public/img/sliderencab/AccederCuentadegoogle.png" alt="acceder"
+                style="width:150px; height: 100px; margin-left:50px; margin-top:5px; object-fit: contain; " />
+
+            <div style="margin-top: 90px; text-align: center;">
+                <button type="button" class="btn btn-info rounded-pill custom-button" id="cerrarsesion">
+                    Cerrar Sesión
+                </button>
+            </div>
+        </div>
+
+       
+        <!-- FORM -->
+
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-bottom py-3 d-flex">
+            <div class="text-center text-dark p-3">
+                © 2024 Copyright:
+                <a class="text-dark" href="#">Mynimaxitiendas Dev</a>
+                . Reservados todos los derechos.
+            </div>
+        </nav>
+
+    </div>
+
 </body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script>
+    $(document).ready(function () {
+        var isOpen = false;
+        $("#login").click(function () {
+            isOpen = !isOpen;
+            if (isOpen) {
+                $("#sliderinisesion").animate({ right: '0px' }, 500);
+            } else {
+                $("#sliderinisesion").animate({ right: '-400px' }, 500);
+            }
+        });
+        $("#loginactivo").click(function () {
+            isOpen = !isOpen;
+            if (isOpen) {
+                $("#sliderinisesion").animate({ right: '0px' }, 500);
+            } else {
+                $("#sliderinisesion").animate({ right: '-400px' }, 500);
+            }
+        });
+        $("#cerrar1").click(function () {
+            $("#sliderinisesion").animate({ right: '-400px' }, 500);
+        });
+    });
+</script>
+
+<script type="module" src="./public/index.js"></script>
 
 </html>
