--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div style="margin-top:30px; text-align: center; margin:25px;">
                 <img id="logininac" src="./public/img/sliderencab/usuarioinac.png" alt="encausuarios"
-                    style="width:100px; margin-left: 130px; display: none;" />
+                    style="width:100px; margin-left: 130px; display: none; display: flex; justify-content: center" />
             </div>
             <div style="margin-top:30px; text-align: center; margin:25px;">
                 <img id="loginac" src="./public/img/sliderencab/usuarios.png" alt="encausuarios"
@@ -47,7 +47,7 @@
             </div>
 
             <img id="accedergoogle" src="./public/img/sliderencab/AccederCuentadegoogle.png" alt="acceder"
-                style="width:150px; height: 100px; margin-left:50px; margin-top:5px; object-fit: contain; " />
+                style="width:70%; height: 100px; margin-left:60px; margin-top:5px; object-fit: contain;  " />
 
             <div style="margin-top: 90px; text-align: center;">
                 <button type="button" class="btn btn-info rounded-pill custom-button" id="cerrarsesion">
